2016-03-15  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.1

	* configure.ac: Check for libtirpc
	* src/Makefile.am: Use TIRPC CFLAGS and LIBS.

2016-02-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.1

	* src/nisplus-alias.c: Remove __glibc_unlikely.
	* src/nisplus-ethers.c: Likewise
	* src/nisplus-grp.c: Likewise
	* src/nisplus-hosts.c: Likewise
	* src/nisplus-initgroups.c: Likewise
	* src/nisplus-network.c: Likewise
	* src/nisplus-proto.c: Likewise
	* src/nisplus-pwd.c: Likewise
	* src/nisplus-rpc.c: Likewise
	* src/nisplus-service.c: Likewise
	* src/nisplus-spwd.c: Likewise

	* release version 1.0

	* src/Makefile.am: Add test case if module is loadable.

2016-02-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* src/nss-nisplus.h: Add prototypes for glibc/libnsl internal
	functions.

	* src/Makefile.am: Add nss-nisplus.h, nss-nisplus.c.
	* src/nisplus-alias.c: Remove glibc internal.
	* src/nisplus-ether.c: Likewise.
	* src/nisplus-grp.c: Likewise.

2015-07-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* Initial import from glibc