@@ -16,6 +16,10 @@
    License along with the GNU C Library; if not, see
    <http://www.gnu.org/licenses/>.  */
 
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+
 #include <nss.h>
 #include <ctype.h>
 #include <errno.h>
@@ -114,6 +118,9 @@ _nss_nisplus_getpublickey (const char *netname, char *pkey, int *errnop)
 }
 
 
+#if !defined(HAVE_XDECRYPT)
+#warning getsecretkey support will be missing!
+#else
 enum nss_status
 _nss_nisplus_getsecretkey (const char *netname, char *skey, char *passwd,
 			   int *errnop)
@@ -203,6 +210,7 @@ _nss_nisplus_getsecretkey (const char *netname, char *skey, char *passwd,
 
   return NSS_STATUS_SUCCESS;
 }
+#endif /* HAVE_XDECRYPT */
 
 
 /* Parse information from the passed string.
